[package]
name = "rewindmap"
version = "0.1.0"
authors = ["Sujay Jayakar <sujayakar@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsdict = "0.0.2"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"