[package]
name = "rewindmap"
version = "0.1.0"
authors = ["Sujay Jayakar <sujayakar@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
rsdict = "0.0.2"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "cachegrind"
harness = false
